Replace jinja with pyforma for faster recursive template substitution

--- a/example/cards.yaml
+++ b/example/cards.yaml
@@ -1,21 +1,22 @@
 # This is a category, which allows you to set some defaults for all cards within the category
 - !category
   variables: # These are the defaults
-    template: template.svg.jinja
+    template: template.svg
     text_color: white
     bg_color: "#430d00ff"
-    left_detail_1: "#{{'%03d' | format(ordinal)}}"
+    left_detail_1: !template "#{{'{:03d}'.format(ordinal)}}"
     left_detail_2: "Artwork AI generated"
     right_detail_1: "A PyCard example"
+    right_detail_2: ""
   cards: # Now follows the list of cards in the category
     - title: PyCard
-      type: Example Card
-      text: | # Variables can refer to other variables.
+      card_type: Example Card
+      text: !template | # Variables can refer to other variables.
         <strong>{{title}}</strong> is a playing card template engine. It allows you to create a template <i>SVG</i>
         file, and then fills in the details of all cards and saves them as SVG and PNG.
       image_path: pycard.svg
     - title: Live Long and Prosper
-      type: Greeting
+      card_type: Greeting
       text: This serves as an example of another card generated from the same template.
       image_path: spocksign.svg
       # The following variables overwrite the category default
