--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ description = "Add your description here"
 requires-python = ">=3.13"
 dependencies = [
     "click>=8.2.1",
-    "jinja2>=3.1.6",
     "playwright>=1.54.0",
+    "pyforma==0.3.0",
     "ruamel-yaml>=0.18.14",
 ]
 
@@ -17,4 +17,5 @@ dev = [
 ]
 
 [tool.basedpyright]
+reportAny = false
 reportExplicitAny = false
